// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MessageRouterScreen renders the error component when not loading 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            [
              {
                "height": 44,
              },
              {
                "end": 0,
                "position": "absolute",
                "start": 0,
                "top": 0,
              },
            ],
          ]
        }
      />
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          androidResetScreenShadowStateOnOrientationChangeEnabled={true}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetDefaultResizeAnimationEnabled={true}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          sheetShouldOverflowTopInset={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
          synchronousShadowStateUpdatesEnabled={false}
        >
          <View
            aria-hidden={false}
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "display": "flex",
                  "overflow": undefined,
                  "visibility": "visible",
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "opacity": 1,
                }
              }
            />
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                pointerEvents="box-none"
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="box-none"
                      style={
                        [
                          {
                            "zIndex": 1,
                          },
                          null,
                        ]
                      }
                    />
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        testID="mock-msgRouterErrorComponent"
                      >
                        Message Id: 01HGRNT85KP8TC5APFQWAA3HJK
                      </View>
                      <View
                        accessibilityLabel="Mock retry button"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": false,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "alignSelf": "auto",
                            "flexShrink": 1,
                          }
                        }
                        testID="messageRouterError-retry-button"
                      >
                        <View
                          collapsable={false}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "backgroundColor": "rgba(11, 62, 227, 1)",
                                "transform": [
                                  {
                                    "scale": 1,
                                  },
                                ],
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "alignItems": "center",
                                "borderCurve": "continuous",
                                "elevation": 0,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "textAlignVertical": "center",
                              },
                              {
                                "paddingHorizontal": 24,
                              },
                              {
                                "backgroundColor": "#0B3EE3",
                                "borderColor": "#FFFFFF",
                                "borderRadius": 8,
                                "borderWidth": 0,
                                "height": 48,
                              },
                              {},
                            ]
                          }
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderCurve": "continuous",
                                "elevation": 0,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "textAlignVertical": "center",
                              },
                              {
                                "transform": [
                                  {
                                    "scale": 1,
                                  },
                                ],
                              },
                              {
                                "backgroundColor": "rgba(11, 62, 227, 1)",
                              },
                              {
                                "paddingHorizontal": 24,
                              },
                              {
                                "backgroundColor": "#0B3EE3",
                                "borderColor": "#FFFFFF",
                                "borderRadius": 8,
                                "borderWidth": 0,
                                "height": 48,
                              },
                              {},
                            ]
                          }
                        >
                          <View
                            collapsable={false}
                            jestAnimatedProps={
                              {
                                "value": {},
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": {},
                              }
                            }
                            jestInlineStyle={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                },
                                {
                                  "columnGap": 8,
                                },
                                false,
                              ]
                            }
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                },
                                {
                                  "columnGap": 8,
                                },
                                false,
                              ]
                            }
                          >
                            <Text
                              accessibilityElementsHidden={true}
                              accessible={false}
                              allowFontScaling={true}
                              collapsable={false}
                              ellipsizeMode="tail"
                              importantForAccessibility="no-hide-descendants"
                              jestAnimatedProps={
                                {
                                  "value": {},
                                }
                              }
                              jestAnimatedStyle={
                                {
                                  "value": {
                                    "color": "rgba(255, 255, 255, 1)",
                                  },
                                }
                              }
                              jestInlineStyle={
                                [
                                  {
                                    "textAlign": "auto",
                                  },
                                  {
                                    "color": "#FFFFFF",
                                  },
                                ]
                              }
                              maxFontSizeMultiplier={1.5}
                              numberOfLines={1}
                              style={
                                [
                                  {},
                                  {
                                    "color": undefined,
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                    "lineHeight": undefined,
                                  },
                                  [
                                    {
                                      "textAlign": "auto",
                                    },
                                    {
                                      "color": "#FFFFFF",
                                    },
                                    {
                                      "color": "rgba(255, 255, 255, 1)",
                                    },
                                  ],
                                ]
                              }
                            >
                              Mock retry button
                            </Text>
                          </View>
                        </View>
                      </View>
                      <View
                        accessibilityLabel="Mock cancel button"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": false,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "alignSelf": "auto",
                            "flexShrink": 1,
                          }
                        }
                        testID="messageRouterError-cancel-button"
                      >
                        <View
                          collapsable={false}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "backgroundColor": "rgba(11, 62, 227, 1)",
                                "transform": [
                                  {
                                    "scale": 1,
                                  },
                                ],
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "alignItems": "center",
                                "borderCurve": "continuous",
                                "elevation": 0,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "textAlignVertical": "center",
                              },
                              {
                                "paddingHorizontal": 24,
                              },
                              {
                                "backgroundColor": "#0B3EE3",
                                "borderColor": "#FFFFFF",
                                "borderRadius": 8,
                                "borderWidth": 0,
                                "height": 48,
                              },
                              {},
                            ]
                          }
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderCurve": "continuous",
                                "elevation": 0,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "textAlignVertical": "center",
                              },
                              {
                                "transform": [
                                  {
                                    "scale": 1,
                                  },
                                ],
                              },
                              {
                                "backgroundColor": "rgba(11, 62, 227, 1)",
                              },
                              {
                                "paddingHorizontal": 24,
                              },
                              {
                                "backgroundColor": "#0B3EE3",
                                "borderColor": "#FFFFFF",
                                "borderRadius": 8,
                                "borderWidth": 0,
                                "height": 48,
                              },
                              {},
                            ]
                          }
                        >
                          <View
                            collapsable={false}
                            jestAnimatedProps={
                              {
                                "value": {},
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": {},
                              }
                            }
                            jestInlineStyle={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                },
                                {
                                  "columnGap": 8,
                                },
                                false,
                              ]
                            }
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                },
                                {
                                  "columnGap": 8,
                                },
                                false,
                              ]
                            }
                          >
                            <Text
                              accessibilityElementsHidden={true}
                              accessible={false}
                              allowFontScaling={true}
                              collapsable={false}
                              ellipsizeMode="tail"
                              importantForAccessibility="no-hide-descendants"
                              jestAnimatedProps={
                                {
                                  "value": {},
                                }
                              }
                              jestAnimatedStyle={
                                {
                                  "value": {
                                    "color": "rgba(255, 255, 255, 1)",
                                  },
                                }
                              }
                              jestInlineStyle={
                                [
                                  {
                                    "textAlign": "auto",
                                  },
                                  {
                                    "color": "#FFFFFF",
                                  },
                                ]
                              }
                              maxFontSizeMultiplier={1.5}
                              numberOfLines={1}
                              style={
                                [
                                  {},
                                  {
                                    "color": undefined,
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                    "lineHeight": undefined,
                                  },
                                  [
                                    {
                                      "textAlign": "auto",
                                    },
                                    {
                                      "color": "#FFFFFF",
                                    },
                                    {
                                      "color": "rgba(255, 255, 255, 1)",
                                    },
                                  ],
                                ]
                              }
                            >
                              Mock cancel button
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`MessageRouterScreen renders the loading component when isLoading is true 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            [
              {
                "height": 44,
              },
              {
                "end": 0,
                "position": "absolute",
                "start": 0,
                "top": 0,
              },
            ],
          ]
        }
      />
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          androidResetScreenShadowStateOnOrientationChangeEnabled={true}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetDefaultResizeAnimationEnabled={true}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          sheetShouldOverflowTopInset={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
          synchronousShadowStateUpdatesEnabled={false}
        >
          <View
            aria-hidden={false}
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "display": "flex",
                  "overflow": undefined,
                  "visibility": "visible",
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "opacity": 1,
                }
              }
            />
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                pointerEvents="box-none"
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="box-none"
                      style={
                        [
                          {
                            "zIndex": 1,
                          },
                          null,
                        ]
                      }
                    >
                      <View
                        aria-hidden={false}
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          accessibilityRole="header"
                          collapsable={false}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "backgroundColor": "#FFFFFF",
                                "borderColor": "transparent",
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "borderBottomWidth": 1,
                                "borderColor": "rgba(210,214,227,0)",
                              },
                              {},
                            ]
                          }
                          style={
                            [
                              {
                                "borderBottomWidth": 1,
                                "borderColor": "rgba(210,214,227,0)",
                              },
                              {},
                              {
                                "backgroundColor": "#FFFFFF",
                                "borderColor": "transparent",
                              },
                            ]
                          }
                        >
                          <View
                            collapsable={false}
                            jestAnimatedProps={
                              {
                                "value": {},
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": {
                                  "marginTop": 0,
                                },
                              }
                            }
                            jestInlineStyle={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "height": 56,
                                  "justifyContent": "space-between",
                                  "paddingHorizontal": 24,
                                },
                              ]
                            }
                            style={
                              [
                                {
                                  "marginTop": 0,
                                },
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "height": 56,
                                  "justifyContent": "space-between",
                                  "paddingHorizontal": 24,
                                },
                              ]
                            }
                          >
                            <View
                              accessibilityLabel="Indietro"
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": false,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              hitSlop={8}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <View
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {
                                      "transform": [
                                        {
                                          "scale": 1,
                                        },
                                      ],
                                    },
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "height": 24,
                                      "width": 24,
                                    },
                                    {
                                      "transform": [
                                        {
                                          "scale": 1,
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <RNSVGSvgView
                                  accessibilityElementsHidden={true}
                                  accessibilityLabel=""
                                  accessible={false}
                                  align="xMidYMid"
                                  bbHeight={36}
                                  bbWidth={36}
                                  collapsable={false}
                                  color="#0E0F13"
                                  focusable={false}
                                  height={36}
                                  importantForAccessibility="no-hide-descendants"
                                  jestAnimatedProps={
                                    {
                                      "value": {
                                        "color": "rgba(14, 15, 19, 1)",
                                      },
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {},
                                    }
                                  }
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  style={
                                    [
                                      {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      {
                                        "flex": 0,
                                        "height": 36,
                                        "width": 36,
                                      },
                                    ]
                                  }
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={36}
                                >
                                  <RNSVGGroup
                                    fill={
                                      {
                                        "payload": 4278190080,
                                        "type": 0,
                                      }
                                    }
                                  >
                                    <RNSVGPath
                                      clipRule={0}
                                      d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                      fill={
                                        {
                                          "type": 2,
                                        }
                                      }
                                      fillRule={0}
                                      propList={
                                        [
                                          "fill",
                                          "fillRule",
                                        ]
                                      }
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                              </View>
                            </View>
                            <View
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessibilityRole="header"
                              accessible={false}
                              importantForAccessibility="yes"
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "marginHorizontal": 16,
                                }
                              }
                            >
                              <Text
                                accessible={false}
                                allowFontScaling={true}
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {
                                      "opacity": 1,
                                    },
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "color": "#0E0F13",
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                                maxFontSizeMultiplier={1.5}
                                numberOfLines={1}
                                style={
                                  [
                                    {},
                                    {
                                      "color": undefined,
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": undefined,
                                    },
                                    [
                                      {
                                        "color": "#0E0F13",
                                        "textAlign": "center",
                                      },
                                      {
                                        "opacity": 1,
                                      },
                                    ],
                                  ]
                                }
                              />
                            </View>
                            <View
                              style={
                                {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "flexShrink": 0,
                                  "gap": 24,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Aiuto contestuale"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  collapsable={false}
                                  jestAnimatedProps={
                                    {
                                      "value": {},
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {
                                        "transform": [
                                          {
                                            "scale": 1,
                                          },
                                        ],
                                      },
                                    }
                                  }
                                  jestInlineStyle={
                                    [
                                      {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                    ]
                                  }
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      {
                                        "transform": [
                                          {
                                            "scale": 1,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    bbHeight={36}
                                    bbWidth={36}
                                    collapsable={false}
                                    color="#0E0F13"
                                    focusable={false}
                                    height={36}
                                    importantForAccessibility="no-hide-descendants"
                                    jestAnimatedProps={
                                      {
                                        "value": {
                                          "color": "rgba(14, 15, 19, 1)",
                                        },
                                      }
                                    }
                                    jestAnimatedStyle={
                                      {
                                        "value": {},
                                      }
                                    }
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 36,
                                          "width": 36,
                                        },
                                      ]
                                    }
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={36}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M6 8c0-3.31371 2.68629-6 6-6 3.3137 0 6 2.68629 6 6 0 2.7248-1.8172 5.0278-4.3079 5.7583C12.3754 14.1446 11 15.2973 11 17v1c0 .5523.4477 1 1 1s1-.4477 1-1v-1c0-.5064.452-1.087 1.255-1.3225C17.5744 14.7039 20 11.6365 20 8c0-4.41828-3.5817-8-8-8-4.41828 0-8 3.58172-8 8 0 .55228.44772 1 1 1s1-.44772 1-1Zm7.5 14.5c0 .8284-.6716 1.5-1.5 1.5s-1.5-.6716-1.5-1.5.6716-1.5 1.5-1.5 1.5.6716 1.5 1.5Z"
                                        fill={
                                          {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          {
                            "bottom": "additive",
                            "left": "off",
                            "right": "off",
                            "top": "off",
                          }
                        }
                        style={
                          [
                            {
                              "flex": 1,
                              "justifyContent": "center",
                            },
                            {
                              "backgroundColor": "#FFFFFF",
                            },
                          ]
                        }
                        testID="routerScreen-loading"
                      >
                        <View
                          style={
                            {
                              "flex": 1,
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flex": 1,
                                "flexDirection": "column",
                                "gap": 24,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Attendi il caricamento del contenuto"
                                accessibilityLabel="Caricamento in corso"
                                accessibilityRole="progressbar"
                                accessible={true}
                                style={
                                  {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  collapsable={false}
                                  jestAnimatedProps={
                                    {
                                      "value": {},
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {},
                                    }
                                  }
                                  jestInlineStyle={
                                    {
                                      "animationDuration": 850,
                                      "animationIterationCount": "infinite",
                                      "animationName": {
                                        "from": {
                                          "transform": [
                                            {
                                              "rotateZ": "0deg",
                                            },
                                          ],
                                        },
                                        "to": {
                                          "transform": [
                                            {
                                              "rotateZ": "360deg",
                                            },
                                          ],
                                        },
                                      },
                                      "animationTimingFunction": "linear",
                                      "transformOrigin": "center",
                                    }
                                  }
                                  style={
                                    [
                                      {
                                        "transformOrigin": "center",
                                      },
                                    ]
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="«r0»-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="«r0»-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "«r0»-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "brushRef": "«r0»-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityLabel="Stiamo caricando il messaggio"
                                allowFontScaling={true}
                                dynamicTypeRamp="title2"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#2B2E38",
                                      "fontFamily": "Titillio",
                                      "fontSize": 22,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 33,
                                    },
                                    {
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Stiamo caricando il messaggio
                              </Text>
                              <Text>
                                Attendi qualche secondo
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
